--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -25,7 +25,6 @@ body {
     margin: 0 auto;
     position: relative;
     background-color: #ffffff;
-	color: #000000;
 	font-family: "Trebuchet MS","Helvetica Neue", Arial, Helvetica, sans-serif;
     font-size: 18px;
 		color: gray;
@@ -99,6 +98,7 @@ a:visited {
 	text-decoration: none;
 	font-weight: bold;;
 	border-bottom: 1px solid #8fa52d;
+	color: black;
 }
 
 a:hover,
@@ -580,7 +580,7 @@ a.rss:active {
 
 #header {
 	position: relative;
-	background-color: black;
+	background-color: #252525;
 	height: 100px; /* 6.0714em if youre into that kinda thing... */
 	border-top: 5px solid #f4f3e0;
 	border-bottom: 6px solid #f4f3e0;
@@ -864,5 +864,5 @@ margin-top: 40px;
 
 .open { background-color: #90B623; color: #141414;}
 .in-progress { background-color: #90A623; color: #141414;}
-.completed { background-color: #ABABAB;color: #141414; }
-.incomplete { background-color: red;color: #141414; }
+.completed { background-color: #ABABAB; color: #141414; }
+.incomplete { background-color: red; color: #141414; }
