changed all the links to have black color

--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -95,7 +95,8 @@ button.link span {
 	border-bottom: 1px solid #8fa52d;
 }
 
-a:visited {
+
+a, a:visited {
 	text-decoration: none;
 	font-weight: bold;
 	color: black;
