--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -99,6 +99,10 @@ button.link span {
 a, a:visited {
 	text-decoration: none;
 	font-weight: bold;
+	color: #8fa52d;
+}
+
+.btn a, a.btn {
 	color: black;
 }
 
