updating blockquote in css

--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -889,3 +889,19 @@ margin-top: 40px;
 	padding-top: 10px;
 }
 
+blockquote {
+  font: 14px/20px italic Times, serif;
+  padding-left: 70px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-right: 10px;
+  background-color: #dadada;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  margin: 5px;
+  background-image: url(http://css-tricks.com/examples/Blockquotes/images/openquote4.gif);
+  background-position: middle left;
+  background-repeat: no-repeat;
+  text-indent: 23px;
+} 	
+
