--- a/version1.1/js/jscripts/tiny_mce/themes/advanced/skins/o2k7/content.css
+++ b/version1.1/js/jscripts/tiny_mce/themes/advanced/skins/o2k7/content.css
@@ -1,5 +1,5 @@
-body, td, pre {color:#000; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:10px; margin:8px;}
-body {background:#FFF;}
+body, td, pre, p, div {color:#000; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:14px; margin:8px;}
+body {background:#fff;}
 body.mceForceColors {background:#FFF; color:#000;}
 h1 {font-size: 2em}
 h2 {font-size: 1.5em}
