--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -912,10 +912,10 @@ blockquote {
   text-indent: 23px;
 } 	
 
-	.form tr:hover {
+	.form > tbody > tr:hover {
 		background-color: #EFEFEF;
 	}
-	.form td:first-child {
+	.form > tbody > tr > td:first-child {
 		width: 30%;
 		font-weight: bold;
 	}
