--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -916,11 +916,11 @@ blockquote {
 		background-color: #EFEFEF;
 	}
 	.form > tbody > tr > td:first-child {
-		width: 30%;
+		min-width: 200px;
 		font-weight: bold;
 	}
 	.form input {
-		width: 100%;
+		width: 300px;
 	}
 	.message {
 		margin-top: 0px;
@@ -939,4 +939,22 @@ blockquote {
 		width: 100%;
 		height: 300px;
 	}
-
+  .box {
+	max-width: 800px;
+	background-color: #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding:16px;
+  border: 1px solid #afafaf;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1) inset;
+	}
