--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -959,3 +959,33 @@ blockquote {
   -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1) inset;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4), 0 0 10px rgba(0, 0, 0, 0.1) inset;
 	}
+
+	
+	
+	
+	#applications {
+  height:217px;
+}
+
+.bubbleInfo {
+  width:200px;
+  height:217px;
+  float:left;
+  position:relative;
+}
+
+.popup {
+  display: none; /* keeps the popup hidden if no JS available */
+  position: absolute;
+  width:135px;
+  height:104px;
+  padding:22px;
+  color:#fff;
+  font-size:11px;
+  font-weight:bold;
+  line-height:16px;
+  background:url(images/tooltip.png) no-repeat;
+  z-index:2;
+  overflow:hidden;
+}
+
