--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -1008,7 +1008,6 @@ blockquote {
 	}
 			#feature1 {
 				height:100%;
-				width: 48%;
 				background:url('') no-repeat;
 				background-position:bottom left;
 			}
@@ -1023,12 +1022,14 @@ blockquote {
 		
 #button_wrap a:hover,
 #button_wrap a:focus,
-#button_wrap a:active {
+#button_wrap a:active,
+#gallery a:hover,
+#gallery a:focus,
+#gallery a:active {
 	background-color: transparent;
 	color: #fff;
 	border: none;
 	text-decoration: none;
 	border: none;
-}
-			
+}		
 /*################### Temp float project - blue area  closes ########################*/
