updated the buttons on the main page

--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -1018,7 +1018,7 @@ blockquote {
 				display:block;
 				right:0px;
 				height:56px;
-				font-size: 50px;
+				font-size: 1.5em;
 				}
 		
 #button_wrap a:hover,
