updated the css for header to be 960px wide

--- a/version1.1/css/main.css
+++ b/version1.1/css/main.css
@@ -518,7 +518,7 @@ a.rss:active {
 }
 .contents {
 	text-align: left;
-	width: 80%;
+	width: 960px;
 	margin: 0 auto;
 	position: relative;
 	clear: both;
